@@ -2,6 +2,7 @@
     improve inotify error messages
     configure.ac default make options; fix -Wformat-security warning #416
     adjust new window maximized panel sizes #420
+    fix toolbar checkbox item properties icon insensitive #418
 0.9.3   2014-01-17:
     fix memory leak on draw selection rectangle on desktop #397
     [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
